--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-body>
+<body>
 
     <h1>My First Heading</h1>
 	
-	<p>My first paragraph.</p>
-	
+	<p>My first paragraph.
+		By Si Ying Liu</p>
 </body>
 </html>
